feat: reformat + linting