@@ -1,5 +1,8 @@
 package jmwdev.async;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -7,56 +10,55 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class AsyncStream {
-    static Long start = System.currentTimeMillis();
 
+    static Logger logger = LogManager.getLogger("AsyncStream");
+    static Long start = System.currentTimeMillis();
     static ExecutorService es = Executors.newFixedThreadPool(5);
 
     public static void simulateDelay(int millis) {
         try {
             Thread.sleep(millis);
-        } catch (InterruptedException e) {
-            throw new RuntimeException(e);
+        } catch (InterruptedException e) { // NOSONAR
+            // swallowing for the sake of simplicity in simulation
+            logger.error(e);
         }
     }
 
     public static void output(String message) {
-        System.out.printf("%d %s  -  %s%n", (System.currentTimeMillis() - start), Thread.currentThread().getName(), message);
+        logger.info("{} {}", (System.currentTimeMillis() - start), message);
     }
 
     public static CompletionStage<String> getResource(String id) {
-        return CompletableFuture.supplyAsync(() -> id, es).thenApplyAsync((res) -> {
+        return CompletableFuture.supplyAsync(() -> id, es).thenApplyAsync(res -> {
             simulateDelay(3000);
             output("resource retrieved: " + res);
             return res;
         }, es);
     }
 
-    public static List<CompletionStage<String>> getResources() throws InterruptedException {
+    public static List<CompletionStage<String>> getResources() {
         List<CompletionStage<String>> retrievedResources = new ArrayList<>();
         int[] ids = IntStream.rangeClosed(1, 10).toArray();
-        Arrays.stream(ids).mapToObj((i) -> Integer.toString(i)).forEach((id) -> retrievedResources.add(getResource(id)));
+        Arrays.stream(ids).mapToObj(Integer::toString).forEach(id -> retrievedResources.add(getResource(id)));
         output("all resources requested");
         return retrievedResources;
     }
 
     public static CompletionStage<String> decorateResource(String resource) {
         simulateDelay(500);
-        output("decoration retrieved: "+resource);
+        output("decoration retrieved: " + resource);
 
         return CompletableFuture.supplyAsync(() -> "Complete resource:" + resource, es);
     }
 
-    public static void main(String[] args) throws InterruptedException {
+    public static void main(String[] args) {
         List<CompletionStage<String>> decoratedResources =
                 getResources().stream()
-                        .map((cs) -> cs.thenComposeAsync((resource) -> {
-                            return decorateResource(resource);
-                        }, es))
-                        .collect(Collectors.toList());
+                        .map(cs -> cs.thenComposeAsync(AsyncStream::decorateResource, es))
+                        .toList();
         output("stream defined");
 
         for (CompletionStage<String> cs : decoratedResources) {
